[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rate-limiter-df"
version = "0.1.0"
description = "A decorator-based rate limiter using the token bucket algorithm"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dan Foster"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/danfdeveloper/rate_limiter_df"
Repository = "https://github.com/danfdeveloper/rate_limiter_df"
Issues = "https://github.com/danfdeveloper/rate_limiter_df/issues"

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest>=7.0.0",
]

[tool.setuptools]
packages = ["rate_limiter_df"]

[tool.pytest.ini_options]
testpaths = ["rate_limiter_df/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = '(build|dist|tests|examples)/'

